// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player Render called with correct props no randomization 1`] = `
<PlayerApp
  description="Test question body"
  dimensions={
    Object {
      "columns": 2,
      "rows": 2,
    }
  }
  header={false}
  leftAlign={false}
  qset={
    Array [
      Array [
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Show 1",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": false,
          },
          "questions": Array [
            Object {
              "text": "Show 1",
            },
          ],
          "type": "QA",
        },
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Hide 1",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": true,
          },
          "questions": Array [
            Object {
              "text": "Hide 1",
            },
          ],
          "type": "QA",
        },
      ],
      Array [
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Hide 2",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": true,
          },
          "questions": Array [
            Object {
              "text": "Hide 2",
            },
          ],
          "type": "QA",
        },
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Show 2",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": false,
          },
          "questions": Array [
            Object {
              "text": "Show 2",
            },
          ],
          "type": "QA",
        },
      ],
    ]
  }
  question="Test Question"
  randCount={0}
  spreadsheet={false}
  title="Test Widget"
/>
`;

exports[`Player Render called with correct props with randomization 1`] = `
<PlayerApp
  description="Test question body"
  dimensions={
    Object {
      "columns": 2,
      "rows": 2,
    }
  }
  header={false}
  leftAlign={false}
  qset={
    Array [
      Array [
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Show 1",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": false,
          },
          "questions": Array [
            Object {
              "text": "Show 1",
            },
          ],
          "type": "QA",
        },
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Hide 1",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": true,
          },
          "questions": Array [
            Object {
              "text": "Hide 1",
            },
          ],
          "type": "QA",
        },
      ],
      Array [
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Hide 2",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": true,
          },
          "questions": Array [
            Object {
              "text": "Hide 2",
            },
          ],
          "type": "QA",
        },
        Object {
          "answers": Array [
            Object {
              "id": null,
              "text": "Show 2",
              "value": 100,
            },
          ],
          "id": null,
          "materiaType": "question",
          "options": Object {
            "blank": false,
          },
          "questions": Array [
            Object {
              "text": "Show 2",
            },
          ],
          "type": "QA",
        },
      ],
    ]
  }
  question="Test Question"
  randCount={2}
  spreadsheet={false}
  title="Test Widget"
/>
`;

exports[`Player Render with no question 1`] = `
<div>
  <header>
    <h1>
      Test Widget
    </h1>
  </header>
  <main>
    <div
      className="popup help"
    >
      <div>
        <h2
          aria-label="Secret Spreadsheet widget instructions. Cells of this spreadsheet have been intentionally hidden. Navigate the spreadsheet and input the hidden data until all cells have been filled. Capitalization and punctuation must be precise to match correctly. Navigate the table cells individually using your screen reader's dedicated key bindings, or use the Tab key to move between blank cells."
          tabIndex="0"
        >
          Secret Spreadsheet - How it works:
        </h2>
        <div>
          <img
            alt="Secret Spreadsheet Instructions"
            src="assets/img/helper-pic.svg"
          />
          <p>
            Cells of this spreadsheet have been 
            <strong>
              intentionally hidden.
            </strong>
          </p>
          <p>
            Input the hidden data correctly 
            <strong>
              (capitalization matters!)
            </strong>
             to restore the spreadsheet.
          </p>
        </div>
        <button
          onClick={[Function]}
          tabIndex="0"
          type="button"
          value="Got it!"
        >
          Got it!
        </button>
      </div>
    </div>
    <p
      className="instructions"
      inert="true"
    >
      Input the 
      <span>
        missing data
      </span>
       to complete the spreadsheet:
    </p>
    <form
      inert="yes"
      onSubmit={[Function]}
    >
      <div
        className="table-surround"
      >
        <div>
          <table>
            <thead />
            <tbody>
              <tr
                id="row0"
              >
                <td
                  className="centerAlign"
                  id="cell0"
                >
                  <span>
                    Show 1
                  </span>
                </td>
                <td
                  className="unanswered centerAlign"
                  id="cell1"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="1-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
              </tr>
              <tr
                id="row1"
              >
                <td
                  className="unanswered centerAlign"
                  id="cell2"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
                <td
                  className="centerAlign"
                  id="cell3"
                >
                  <span>
                    Show 2
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <p>
        You've filled out 
        0
         of 
        0
         missing cells
      </p>
      <input
        aria-label="Submit answers."
        className="filled"
        type="submit"
        value="Submit"
      />
    </form>
  </main>
</div>
`;

exports[`Player Render with question and body 1`] = `
<div>
  <header>
    <h1>
      Test Widget
    </h1>
  </header>
  <main>
    <div
      className="popup help"
    >
      <div>
        <h2
          aria-label="Secret Spreadsheet widget instructions. Cells of this spreadsheet have been intentionally hidden. Navigate the spreadsheet and input the hidden data until all cells have been filled. Capitalization and punctuation must be precise to match correctly. Navigate the table cells individually using your screen reader's dedicated key bindings, or use the Tab key to move between blank cells."
          tabIndex="0"
        >
          Secret Spreadsheet - How it works:
        </h2>
        <div>
          <img
            alt="Secret Spreadsheet Instructions"
            src="assets/img/helper-pic.svg"
          />
          <p>
            Cells of this spreadsheet have been 
            <strong>
              intentionally hidden.
            </strong>
          </p>
          <p>
            Input the hidden data correctly 
            <strong>
              (capitalization matters!)
            </strong>
             to restore the spreadsheet.
          </p>
        </div>
        <button
          onClick={[Function]}
          tabIndex="0"
          type="button"
          value="Got it!"
        >
          Got it!
        </button>
      </div>
    </div>
    <p
      className="instructions"
      inert="true"
    >
      Input the 
      <span>
        missing data
      </span>
       to complete the spreadsheet:
    </p>
    <form
      inert="yes"
      onSubmit={[Function]}
    >
      <div
        className="table-surround"
      >
        <div>
          <table>
            <thead />
            <tbody>
              <tr
                id="row0"
              >
                <td
                  className="centerAlign"
                  id="cell0"
                >
                  <span>
                    Show 1
                  </span>
                </td>
                <td
                  className="unanswered centerAlign"
                  id="cell1"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="1-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
              </tr>
              <tr
                id="row1"
              >
                <td
                  className="unanswered centerAlign"
                  id="cell2"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
                <td
                  className="centerAlign"
                  id="cell3"
                >
                  <span>
                    Show 2
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <p>
        You've filled out 
        0
         of 
        0
         missing cells
      </p>
      <p
        aria-roledescription="button"
        className="link"
        onClick={[Function]}
        onKeyUp={[Function]}
        tabIndex="0"
      >
        View Question
      </p>
      <input
        aria-label="Submit answers."
        className="filled"
        type="submit"
        value="Submit"
      />
    </form>
  </main>
</div>
`;

exports[`Player Render with question and no body 1`] = `
<div>
  <header>
    <h1>
      Test Widget
    </h1>
  </header>
  <main>
    <div
      className="popup help"
    >
      <div>
        <h2
          aria-label="Secret Spreadsheet widget instructions. Cells of this spreadsheet have been intentionally hidden. Navigate the spreadsheet and input the hidden data until all cells have been filled. Capitalization and punctuation must be precise to match correctly. Navigate the table cells individually using your screen reader's dedicated key bindings, or use the Tab key to move between blank cells."
          tabIndex="0"
        >
          Secret Spreadsheet - How it works:
        </h2>
        <div>
          <img
            alt="Secret Spreadsheet Instructions"
            src="assets/img/helper-pic.svg"
          />
          <p>
            Cells of this spreadsheet have been 
            <strong>
              intentionally hidden.
            </strong>
          </p>
          <p>
            Input the hidden data correctly 
            <strong>
              (capitalization matters!)
            </strong>
             to restore the spreadsheet.
          </p>
        </div>
        <button
          onClick={[Function]}
          tabIndex="0"
          type="button"
          value="Got it!"
        >
          Got it!
        </button>
      </div>
    </div>
    <p
      className="instructions"
      inert="true"
    >
      Input the 
      <span>
        missing data
      </span>
       to complete the spreadsheet:
    </p>
    <form
      inert="yes"
      onSubmit={[Function]}
    >
      <div
        className="table-surround"
      >
        <div>
          <table>
            <thead />
            <tbody>
              <tr
                id="row0"
              >
                <td
                  className="centerAlign"
                  id="cell0"
                >
                  <span>
                    Show 1
                  </span>
                </td>
                <td
                  className="unanswered centerAlign"
                  id="cell1"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="1-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
              </tr>
              <tr
                id="row1"
              >
                <td
                  className="unanswered centerAlign"
                  id="cell2"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
                <td
                  className="centerAlign"
                  id="cell3"
                >
                  <span>
                    Show 2
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <p>
        You've filled out 
        0
         of 
        0
         missing cells
      </p>
      <p
        aria-roledescription="button"
        className="link"
        onClick={[Function]}
        onKeyUp={[Function]}
        tabIndex="0"
      >
        View Question
      </p>
      <input
        aria-label="Submit answers."
        className="filled"
        type="submit"
        value="Submit"
      />
    </form>
  </main>
</div>
`;

exports[`Player Render without randomization 1`] = `
<div>
  <header>
    <h1>
      Test Widget
    </h1>
  </header>
  <main>
    <div
      className="popup help"
    >
      <div>
        <h2
          aria-label="Secret Spreadsheet widget instructions. Cells of this spreadsheet have been intentionally hidden. Navigate the spreadsheet and input the hidden data until all cells have been filled. Capitalization and punctuation must be precise to match correctly. Navigate the table cells individually using your screen reader's dedicated key bindings, or use the Tab key to move between blank cells."
          tabIndex="0"
        >
          Secret Spreadsheet - How it works:
        </h2>
        <div>
          <img
            alt="Secret Spreadsheet Instructions"
            src="assets/img/helper-pic.svg"
          />
          <p>
            Cells of this spreadsheet have been 
            <strong>
              intentionally hidden.
            </strong>
          </p>
          <p>
            Input the hidden data correctly 
            <strong>
              (capitalization matters!)
            </strong>
             to restore the spreadsheet.
          </p>
        </div>
        <button
          onClick={[Function]}
          tabIndex="0"
          type="button"
          value="Got it!"
        >
          Got it!
        </button>
      </div>
    </div>
    <p
      className="instructions"
      inert="true"
    >
      Input the 
      <span>
        missing data
      </span>
       to complete the spreadsheet:
    </p>
    <form
      inert="yes"
      onSubmit={[Function]}
    >
      <div
        className="table-surround"
      >
        <div>
          <table>
            <thead />
            <tbody>
              <tr
                id="row0"
              >
                <td
                  className="centerAlign"
                  id="cell0"
                >
                  <span>
                    Show 1
                  </span>
                </td>
                <td
                  className="unanswered centerAlign"
                  id="cell1"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="1-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
              </tr>
              <tr
                id="row1"
              >
                <td
                  className="unanswered centerAlign"
                  id="cell2"
                >
                  <input
                    aria-label="This cell is currently blank, please provide a value."
                    autoComplete="off"
                    className="unanswered"
                    id="2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="?"
                    type="text"
                    value=""
                  />
                </td>
                <td
                  className="centerAlign"
                  id="cell3"
                >
                  <span>
                    Show 2
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <p>
        You've filled out 
        0
         of 
        0
         missing cells
      </p>
      <p
        aria-roledescription="button"
        className="link"
        onClick={[Function]}
        onKeyUp={[Function]}
        tabIndex="0"
      >
        View Question
      </p>
      <input
        aria-label="Submit answers."
        className="filled"
        type="submit"
        value="Submit"
      />
    </form>
  </main>
</div>
`;
